--- a/templates/base.html
+++ b/templates/base.html
@@ -5,8 +5,11 @@
     </head>
 <body>
     <div>
-        <a href='/blog'>Main Blog</a><br>
+        <a href='/'>Home</a>
+        <a href='/blog'>Main Blog</a>
         <a href='/newpost'>New Post</a>
+        <a href='/login'>Login</a>
+        <a href='/logout'>Logout</a>
     </div>
     {% block content %}
     {% endblock %}
