--- a/templates/single_post.html
+++ b/templates/single_post.html
@@ -3,5 +3,9 @@
 {% block content %}
 <h2>{{blog.title}}</h2>
 <p>{{blog.body}}</p>
+ 
+
+<sub>written by:<a href='/blog?userid={{blog.owner_id}}'>{{blog.owner.username}}</a></sub>
+
 
 {% endblock %}
